[ACPI] C1 fixes when processor driver is loaded honor "halt=" cmdline parameter use monitor/mwait when available http://bugzilla.kernel.org/show_bug.cgi?id=2280

Signed-off-by: Venkatesh Pallipadi <venkatesh.pallipadi@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>